Update .gitignore to exclude uploaded files
- Add rules to ignore uploaded files in static/uploads/
- Add .gitkeep to maintain uploads directory structure
- Add rules for temporary files

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ migrations/versions/
 # Local development settings
 local_settings.py
 
+# Uploaded files
+static/uploads/*
+!static/uploads/.gitkeep
+
+# Temporary files
+*.tmp
+*.temp
